tests/fixtures/positive/code-style/NoLongLines.cls
public class Example {
    public void method1() {
        // Short line
        Integer x = 5;
    }

    public void method2() {
        String s = 'This is a short string that fits';
        return s;
    }

    private Integer calculate(Integer a, Integer b) {
        return a + b;
    }

    public void anotherMethod() {
        if (x > 5) {
            System.debug('Valid');
        }
    }
}

